--- a/developers.html
+++ b/developers.html
@@ -14,7 +14,7 @@
   </header>
   <nav>
     <ul>
-      <li><a href="developers.html">About us</a></li>
+      <li><a href="./index.html">Home</a></li> 
     </ul>
   </nav>
   <main>
