--- a/setting.html
+++ b/setting.html
@@ -15,7 +15,7 @@
     <nav id="nav">
       <ul>
         <li>
-          <a href="/">Home</a>
+          <a href="./index.html">Home</a>
      
         </li>
       </ul>
