Adding footer in developer page and setting page

--- a/developers.html
+++ b/developers.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./developers.css">
+  <link rel="stylesheet" href="./style.css">  
   <title>Developers</title>
 </head>
 
@@ -48,6 +49,40 @@
           <p class=""></p>
       </div>
     </section>
+
+  <!-- ==================== -->
+  <!-- Ronny add-on Footer -->
+  <!-- ==================== -->
+  <footer class="footer display-grid">
+    <div class="container">
+        <div class="footer-column">
+            <h2>Payment Method</h2>
+            <div class="payment-images">
+                <img class="payment-image" src="./public/img/cc-visa-brands.svg" alt="">
+                <img class="payment-image" src="./public/img/cc-mastercard-brands.svg" alt="">
+                <img class="payment-image" src="./public/img/cc-amex-brands.svg" alt="">
+                <img class="payment-image" src="./public/img/cc-discover-brands.svg" alt="">
+            </div>
+        </div>
+        <div class="footer-column">
+          <h2>Developer</h2>
+          <h3>Name:</br>Buding IT System</h3>
+          <h3>Student ID:</br>Group 6</h3>
+        </div>
+        <div class="footer-column">
+            <h2>Contact Us</h2>
+            <h3>E–mail:</br>group6@outlook.com</h3>
+            <h3>Call us:</br>04353322211</h3>
+        </div>
+        <div class="footer-column">
+            <h2>Follow Us</h2>
+            <div class="social-images">
+                <img class="social-image" src="./public/img/facebook-square-brands.svg" alt="">
+                <img class="social-image" src="./public/img/instagram-square-brands.svg" alt="">
+            </div>
+        </div>
+      </div>
+    </footer>
   </main>
 </body>
 
