--- a/index.html
+++ b/index.html
@@ -244,12 +244,12 @@
         </div>
         <div class="footer-column">
           <h2>Developer</h2>
-          <h3>Name:</br>Yao Lin (Ronny)</h3>
-          <h3>Student ID:</br>s3747404</h3>
+          <h3>Name:</br>Buding IT System</h3>
+          <h3>Student ID:</br>Group 6</h3>
         </div>
         <div class="footer-column">
             <h2>Contact Us</h2>
-            <h3>E–mail:</br>help@russelstreetmedical.com</h3>
+            <h3>E–mail:</br>group6@outlook.com</h3>
             <h3>Call us:</br>04353322211</h3>
         </div>
         <div class="footer-column">
